--- a/app/src/main/res/layout/bar_layout.xml
+++ b/app/src/main/res/layout/bar_layout.xml
@@ -5,5 +5,6 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/toolbar"
     android:background="@color/colorPrimaryDark"
-    android:theme="@style/Base.ThemeOverlay.AppCompat.Dark.ActionBar">
+    android:theme="@style/Base.ThemeOverlay.AppCompat.Dark.ActionBar"
+    app:popupTheme="@style/MenuStyle">
 </androidx.appcompat.widget.Toolbar>
