--- a/app/src/main/res/layout/fragment_users.xml
+++ b/app/src/main/res/layout/fragment_users.xml
@@ -14,7 +14,7 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:layout_below="@+id/search_users"
-        android:id="@+id/recycler_view"
+        android:id="@+id/recycler_view1"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
